# mapkgsutils

./: .cruft.json  CITATION.cff  LICENSE  README.md  justfile  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: create-release.yml  tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/mapkgsutils/: __init__.py  __main__.py  api.py  cli.py  consolidate.py  context.py  diff.py  download.py  exports.py  logging.py  resolve.py  sparql.py  version.py
src/mapkgsutils/config/: __init__.py  schema.py
src/mapkgsutils/parsers/: __init__.py  base.py  config.py
tests/: __init__.py  test_config.py  test_consolidate.py  test_context.py  test_diff.py  test_exports.py  test_parsers_base.py  test_version.py
