[build-system]
requires = ["uv_build>=0.11.2,<1.0"]
build-backend = "uv_build"

[project]
name = "mapkgsutils"
version = "0.2.4-dev"
description = "Utils shared by several mapping set generation tools for biomedical databases"
readme = "README.md"
authors = [
    { name = "Javier Millan Acosta", email = "javier.millanacosta@gmail.com" }
]
maintainers = [
    { name = "Javier Millan Acosta", email = "javier.millanacosta@gmail.com" }
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
]
keywords = [
    "snekpack", # please keep this keyword to credit the cookiecutter-snekpack template
    "cookiecutter",
    # TODO add your own free-text keywords
]

# License Information.
# See PEP-639 at https://peps.python.org/pep-0639/#add-license-files-key
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"
dependencies = [
    "more-itertools", # missing from itertools in stdlib
    "tqdm", # progress bars
    "click",
    "more-click",
    "typing-extensions",
    "pydantic>=2.0", # data validation and models
    "pyyaml", # datasource config loading
    "sssom==0.4.21", # SSSOM standard support
    "sssom-schema==1.1.0a5", # SSSOM schema for validation
    "curies>=0.7.0", # CURIE handling
    "polars>=0.20.0", # fast dataframe operations for cardinalities/diffs
    "polars-runtime-32", # polars runtime for 32-bit systems
    "pandas", # DataFrame support for some workflows
    "numpy", # required by pandas and polars
    "httpx>=0.24.0", # HTTP client for downloads
]

# see https://peps.python.org/pep-0735/ and https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
[dependency-groups]
tests = [
    "pytest",
    "coverage[toml]",
]
docs = [
    "sphinx>=8,<9",
    "sphinx-rtd-theme>=3.0","sphinx-click", 
    "sphinx_automodapi",
    # Include if your project uses Pydantic:
    # "autodoc_pydantic",
    # To include LaTeX comments easily in your docs.
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
]
lint = [
    "ruff",
]
typing = [
    { include-group = "tests" },
    "mypy",
    "pydantic",
    "types-click",
    # You will probably have to add additional type stubs here, especially if you're using tox-uv
]
docs-lint = [
    { include-group = "docs" },
    "doc8",
]
format-docs = [
    { include-group = "docs" },
    "docstrfmt",
]
doctests = [
    "xdoctest",
    "pygments",
]
pyroma = [
    "uv-build",
    "pyroma",
    "pygments",
]

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project.optional-dependencies]


# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
# and also https://packaging.python.org/en/latest/specifications/well-known-project-urls/
[project.urls]
"Bug Tracker" = "https://github.com//mapkgsutils/issues"
Homepage = "https://github.com//mapkgsutils"
Repository = "https://github.com//mapkgsutils.git"
Documentation = "https://mapkgsutils.readthedocs.io"
Funding = "https://github.com/sponsors/jmillanacosta"

#[project.scripts]
#mapkgsutils = "mapkgsutils.cli:main"

[tool.cruft]
skip = [
    "**/__init__.py",
    "tests/*"
]

# MyPy, see https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = [
    "pydantic.mypy",
]

# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
[tool.doc8]
max-line-length = 120

# Pytest, see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = [
    "mapkgsutils",
]
omit = [
    "tests/*",
    "docs/*",
    "src/mapkgsutils/version.py",
    "src/mapkgsutils/__main__.py",
    "src/mapkgsutils/cli.py",
]

[tool.coverage.paths]
source = [
    "src/mapkgsutils",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "DOC", # pydoclint
    "B", # bugbear
    "S", # bandit
    "T20", # print
    "N", # pep8 naming
    "ERA", # eradicate commented out code
    "NPY", # numpy checks
    "RUF", # ruff rules
    "C4", # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
]

# See https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
# Ignore security issues in the version.py, which are inconsistent
"src/mapkgsutils/version.py" = ["S603", "S607"]
# Ignore commented out code in Sphinx configuration file
"docs/source/conf.py" = ["ERA001"]
# Prints are okay in notebooks
"notebooks/**/*.ipynb" = ["T201"]
# assert is the normal way to write test expectations
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-third-party = [
    "tqdm",
]
known-first-party = [
    "mapkgsutils",
    "tests",
]

[tool.ruff.format]
# see https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true

[tool.bumpversion]
current_version = "0.2.4-dev"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?(?:\\+(?P<build>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?"
serialize = [
    "{major}.{minor}.{patch}-{release}+{build}",
    "{major}.{minor}.{patch}+{build}",
    "{major}.{minor}.{patch}-{release}",
    "{major}.{minor}.{patch}",
]
commit = true
tag = false

[tool.bumpversion.parts.release]
optional_value = "production"
first_value = "dev"
values = [
    "dev",
    "production",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/mapkgsutils/version.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""
[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"
